--- a/index.html
+++ b/index.html
@@ -83,16 +83,32 @@
             <h2 class="title">Projects</h2>
             <hr>
             <div class="container-cards">
-                <div class="card">
-                    <img class="card-img" src="./assets/thumbDoctor.svg" alt="">
-                    
+
+                <div id="card-DC" class="card">
+                    <img class="card-img" src="./assets/thumbDoctor.svg" alt="">                    
                     <div class="card-info">
                         <p class="card-title">DoctorCare</p>
                         <!-- <button class="card-btn">Show more</button> -->
                     </div>                    
                 </div> 
 
-                <div class="card">
+                <div class="cardsContent">
+                    <h2>DoctorCare</h2>
+                    <img src="./assets/Preview-DoctorCare.png" alt="doctorcare">
+                    <p>
+                        Project from <a href="https://www.rocketseat.com.br/" target="_blank">Rocketseat</a> during the Next Level Week event.
+                        <br>
+                        <br>
+                        DoctorCare have an One Page format, intended to small and medium business related to health services.
+                        <br>
+                        Responsive design: a website that displays nicely on desktop, phone and tablet.
+                        <br>
+                        <br>
+                        You can check the <a href="https://gabrielfiorotti.github.io/DoctorCare/" target="_blank">result</a> or view the code in <a href="https://github.com/gabrielfiorotti/DoctorCare" target="_blank">Github</a>.
+                    </p>        
+                </div>
+
+                <div id="card-MCC" class="card">
                     <img class="card-img" src="./assets/thumbMCC.svg" alt="">
                     <div class="card-info">
                         <p class="card-title">Marcacafé</p>
@@ -100,7 +116,7 @@
                     </div>                    
                 </div> 
 
-                <div class="card">
+                <div id = "card-NFX" class="card">
                     <img class="card-img" src="./assets/thumbNFX.svg" alt="">
                     <div class="card-info">
                         <p class="card-title">Netflix Landing Page</p>
@@ -108,7 +124,7 @@
                     </div>                    
                 </div> 
 
-                <div class="card">
+                <div id="card-FR" class="card">
                     <img class="card-img" src="./assets/thumbFR.svg" alt="">
                     <div class="card-info">
                         <p class="card-title">Fate Revealer</p>
