improving some responsive

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     </main>
 
     <footer>
-        <div> © Designed and coded by Gabriel Fiorotti :)</div>
+        <div> 2023 © Designed and coded by Gabriel Fiorotti :)</div>
     </footer>
 
 </body>
