--- a/index.html
+++ b/index.html
@@ -84,6 +84,31 @@
             <h2 class="title">Projects</h2>
             <hr>
             <div class="container-cards">
+
+                <div id="cardClothes" class="card">
+                    <img class="card-img" src="./assets/thumbClothes.svg" alt="">                    
+                    <div class="card-info">
+                        <p class="card-title">Clothes E-commerce</p>
+                    </div>                    
+                </div>
+
+                    <div  class="cardShow cardShowClothes">
+                        <h2>Clothes E-commerce</h2>
+                        <iframe class="video_clothes" width="560" height="315" src="https://www.youtube.com/embed/eBy-MJG4fH4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <p>
+                            My Final Project from <a href="https://cs50.harvard.edu/x/2023/" target="_blank">Harvard CS50x Course</a>.
+                            <br>
+                            <br>
+                            The project consists in a web application e-commerce. I wanted to create something that could be useful for clients and users in general, but also dedicate much effort in an admin interface that could easily manage the store.
+                            <br>
+                            <br>
+                            Play the <a href="https://www.youtube.com/watch?v=eBy-MJG4fH4" target="_blank">video</a> above to see the result or view the code and the full project description in <a href="https://github.com/gabrielfiorotti/Clothes_Ecommerce" target="_blank">Github</a>.
+                        </p>       
+                        <button class="closeClothes"><strong>X</strong> Close</button> 
+                    </div>
+
+
+
                 <div id="cardDC" class="card">
                     <img class="card-img" src="./assets/thumbDoctor.svg" alt="">                    
                     <div class="card-info">
@@ -125,7 +150,7 @@
                             Thought through the entire design structure of the project, analyzing the company's style and its logo colors, then I developed the whole page.
                             <br>
                             <br>
-                            You can check the <a href="https://www.marcacafe.com.br/" target="_blank">result</a> or view the code in <a href="https://github.com/gabrielfiorotti/DoctorCare" target="_blank">Github</a>.
+                            You can check the <a href="https://www.marcacafe.com.br/" target="_blank">result</a> or view the code in <a href="https://github.com/gabrielfiorotti/WebPage-CoffeeCompany" target="_blank">Github</a>.
                         </p>       
                         <button class="closeMCC"><strong>X</strong> Close</button> 
                     </div>
@@ -183,12 +208,12 @@
                 <p>Get in touch with me!</p>
                 <div class="container-links">
                     <div>
-                        <a href="" target="_blank">
+                        <a href="https://www.linkedin.com/in/gabriel-fiorotti-2033b526a/" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" fill="black" class="bi bi-linkedin svg" viewBox="0 0 16 16"> <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/> </svg>
                         </a>
                     </div>
 
-                    <div>
+                    <div title="gab.fiorotti@gmail.com">
                         <a href="mailto:gab.fiorotti@gmail.com" target="_blank">
                             <svg class="svg" xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 24 24"><path d="M0 3v18h24v-18h-24zm6.623 7.929l-4.623 5.712v-9.458l4.623 3.746zm-4.141-5.929h19.035l-9.517 7.713-9.518-7.713zm5.694 7.188l3.824 3.099 3.83-3.104 5.612 6.817h-18.779l5.513-6.812zm9.208-1.264l4.616-3.741v9.348l-4.616-5.607z"/></svg>
                         </a>
