--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h2 class="title">About</h2>
             <hr>
             <p class="paragraph">
-                <strong>Hi, I'm Gabriel!</strong> Born in Brazil, I'm a freelancer, and since the beginning of 2022, when I first entered the <strong>technology world</strong>, I have also been most of the time a self-taught student and developer in love with this area.
+                <strong>Hi! I'm Gabriel, 23 years old.</strong> Since the beginning of 2022, when I got deep into <strong>technology world</strong>, I'm most of the time a self-taught student and developer in love with this area.
             </p>
 
             <div class="container-timeline">
@@ -70,7 +70,7 @@
             <p class="paragraph p-bellow">
                 As you can see in the timeline above, I was not too certain about what I would do for a living, and that's why I started my career with a Law degree, which was a way for me to study something as broad as possible, as I couldn't decide on a single subject.
                 <br><br>
-                However, after graduation, I discovered that <strong>my real passion was in the technology field, </strong>and since then, I couldn't stop practicing, always trying to <strong>improve myself and learn new skills. </strong>
+                However, I discovered that <strong>my real passion was in the technology field, </strong>and since then, I couldn't stop practicing, always trying to <strong>improve my knowledges and learn new skills. </strong>
             </p>
         </section>
 
