Changing home text

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </header>
             <div class="home-content">
                 <h1>Gabriel Fiorotti</h1>
-                <p>Junior Frontend Developer</p>
+                <p>Frontend Developer</p>
             </div>
             <a href="#about"><img class="slideUp" src="./assets/chevron-compact-down-white.svg" alt="chevron-down"></a>
         </section>
